test/files/neg/t4137.check
t4137.scala:9: error: overriding type EPC in trait A, which equals [X1]C[X1];
  overriding concrete type alias type EPC is not allowed except when equivalent
  override type EPC = C[T]
                ^
t4137.scala:10: error: overriding type EPC2 in trait A, which equals [X1]C[X1];
  overriding concrete type alias type EPC2 is not allowed except when equivalent
  override type EPC2[X1 <: String] = C[X1]
                ^
two errors found
